--- a/src/assets/CSS/shophome.css
+++ b/src/assets/CSS/shophome.css
@@ -104,14 +104,17 @@
 
 .testomonialprofile {
   border-radius: 50%;
-  height: 90px;
-  width: 90px;
+  height: 130px;
+  width: 130px;
   border: 7px solid rgb(242, 236, 236);
   box-shadow: 4px 4px 40px 0px #00000040;
   text-align: center;
   align-content: center;
   color:  white;
-  background: linear-gradient(to left, rgba(238, 88, 93, 0) 0%, rgba(238, 88, 93, 0.2) 18.61%, rgba(238, 88, 93, 0.814196) 61.08%, #EE585D 81.38%);
+  /* background: url('../img/aa/POSITIVE.png'); */
+  /* background-image: url('../img/aa/youer.jpeg'); */
+  background-size: cover;
+  background-repeat: no-repeat;
 
 }
 .profileposition {
@@ -119,6 +122,8 @@
   top: 70px;
   justify-content: center;
   display: flex;
+
+
 }
 
 .testomonialback {
