--- a/src/assets/CSS/shophome.css
+++ b/src/assets/CSS/shophome.css
@@ -3,7 +3,7 @@
 .shopnow {
   background: url("../../assets/img/Home/image112.png");
 
-  height: 450px;
+  /* height: 250px; */
   background-repeat: no-repeat;
   background-position: center;
 }
