--- a/src/pages/blogdetails.css
+++ b/src/pages/blogdetails.css
@@ -57,3 +57,24 @@
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
 }
+
+
+
+.floating-share {
+    /* position: fixed;
+    top: 50%; 
+    right: 20px; */
+    transform: translateY(-50%); /* Exactly center vertically */
+    background-color: #25D366; /* WhatsApp green */
+    border-radius: 50%;
+    padding: 15px;
+    cursor: pointer;
+    z-index: 9999;
+    /* box-shadow: 0 4px 8px rgba(0,0,0,0.3); */
+    transition: transform 0.2s, box-shadow 0.2s;
+  }
+  
+  .floating-share:hover {
+    transform: translateY(-50%) scale(1.1);
+    /* box-shadow: 0 6px 12px rgba(0,0,0,0.4); */
+  }
